2007-02-25  Ralf Angeli  <angeli@caeruleus.net>

	* lisp/reftex-vars.el (reftex-cite-key-separator): New variable.

	* lisp/reftex-auc.el (reftex-arg-cite): Use
	`reftex-cite-key-separator'.

	* lisp/reftex-cite.el (reftex-do-citation)
	(reftex-figure-out-cite-format): Use `reftex-cite-key-separator'.

	* doc/reftex.texi (Options (Creating Citations)): Document
	`reftex-cite-key-separator'.

	* lisp/reftex-cite.el (reftex-do-citation): Return all keys, not
	just the first one.

	* lisp/reftex-auc.el (reftex-arg-cite): Correctly handle new
	value type returned by `reftex-citation'.

2007-02-24  Ralf Angeli  <angeli@caeruleus.net>

	* lisp/Makefile (.PHONY): Add `lisp' target.

	* Makefile: Make building and installing possible.  (Necessary due
	to different directory and file layout in repository compared to
	original tar ball.)

	* lisp/Makefile: New file.

	* doc/Makefile: New file.

	* doc/reftex.texi: Set correct filename for standalone
	distribution.

2007-02-17  Ralf Angeli  <angeli@caeruleus.net>

	* lisp/reftex-auc.el: New file.  Copied (including change history)
	from Emacs repository by Savannah admin.

	* lisp/reftex-cite.el: New file.  Copied (including change
	history) from Emacs repository by Savannah admin.

	* lisp/reftex-dcr.el: New file.  Copied (including change history)
	from Emacs repository by Savannah admin.

	* lisp/reftex-global.el: New file.  Copied (including change
	history) from Emacs repository by Savannah admin.

	* lisp/reftex-index.el: New file.  Copied (including change
	history) from Emacs repository by Savannah admin.

	* lisp/reftex-parse.el: New file.  Copied (including change
	history) from Emacs repository by Savannah admin.

	* lisp/reftex-ref.el: New file.  Copied (including change history)
	from Emacs repository by Savannah admin.

	* lisp/reftex-sel.el: New file.  Copied (including change history)
	from Emacs repository by Savannah admin.

	* lisp/reftex-toc.el: New file.  Copied (including change history)