@@ -1,3 +1,10 @@
+2007-02-25  David Kastrup  <dak@gnu.org>
+
+	* lisp/reftex.el (reftex-uniquify, reftex-uniquify-by-car):
+	Replace O(n^2) algorithms with O(n log n).  Introduce optional
+	argument SORT (not yet used).  TODO: figure out callers that can
+	specify SORT, in order to further speed this up.
+
 2007-02-25  Ralf Angeli  <angeli@caeruleus.net>
 
 	* lisp/reftex-vars.el (reftex-cite-key-separator): New variable.
